// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Outline/Section Heading With A Heading 1`] = `
<h1
  className="h1"
  id="o:1s:1-level-1"
>
  <a
    href="#o:1s:1-level-1"
  >
    Level 1
  </a>
</h1>
`;

exports[`Storyshots Outline/Section Heading With Style Roots 1`] = `
Array [
  <h1
    className="h1"
    id="o:1s:1-level-1"
  >
    <a
      href="#o:1s:1-level-1"
    >
      Level 1
    </a>
  </h1>,
  <h2
    className="h2"
    id="o:2s:2-level-2"
  >
    <a
      href="#o:2s:2-level-2"
    >
      Level 2
    </a>
  </h2>,
  <aside>
    <h3
      className="h1"
      id="o:3s:1-level-1"
    >
      <a
        href="#o:3s:1-level-1"
      >
        Level 1
      </a>
    </h3>
  </aside>,
]
`;

exports[`Storyshots Outline/Section Heading With Three Levels Of Nesting 1`] = `
Array [
  <h1
    className="h1"
    id="o:1s:1-level-1"
  >
    <a
      href="#o:1s:1-level-1"
    >
      Level 1
    </a>
  </h1>,
  <h2
    className="h2"
    id="o:2s:2-level-2"
  >
    <a
      href="#o:2s:2-level-2"
    >
      Level 2
    </a>
  </h2>,
  <h3
    className="h3"
    id="o:3s:3-level-3"
  >
    <a
      href="#o:3s:3-level-3"
    >
      Level 3
    </a>
  </h3>,
]
`;

exports[`Storyshots Outline/Section Heading With Two Sibling Headings 1`] = `
Array [
  <h1
    className="h1"
    id="o:1s:1-level-1"
  >
    <a
      href="#o:1s:1-level-1"
    >
      Level 1
    </a>
  </h1>,
  <h1
    className="h1"
    id="o:1s:1-level-1"
  >
    <a
      href="#o:1s:1-level-1"
    >
      Level 1
    </a>
  </h1>,
]
`;
